--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=3001 node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "PORT=3001 node ./bin/www"
   },
   "dependencies": {
     "axios": "^0.19.0",
